--- a/portfolio.html
+++ b/portfolio.html
@@ -1,59 +1,116 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>portfolio</title>
-    <link rel="stylesheet" href="./styles/style.css">
-</head>
-<body>
-    <!-- navigation on pages -->
+    <link rel="stylesheet" href="./styles/style.css" />
+  </head>
+  <body>
+    <!-- Navigation on pages -->
     <header>
-        <nav>
-          <a href="./index.html">WebStudio</a>
-          <ul>
-            <li><a href="">Studio</a></li>
-            <li><a href="./portfolio.html">Portfolio</a></li>
-            <li><a href="">Contacts</a></li>
-          </ul>
-        </nav>
-        <address>
-          <ul>
-            <li>
-              <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-            </li>
-             <li><a href="tel:+110001111111">+11 (000) 111-11-11</a>
-             </li>
-          </ul>
-        </address> 
-      </header>
-
-
-      
-<main>
-
-
-
-
-</main>
-
-
-
-
-
-
-
-
-
-
-      <!-- Footer -->
+      <nav>
+        <a href="./index.html">WebStudio</a>
+        <ul>
+          <li><a href="">Studio</a></li>
+          <li><a href="./portfolio.html">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
+        </ul>
+      </nav>
+      <address>
+        <ul>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
+      </address>
+    </header>
+    <!-- Main menu -->
+    <main>
+      <section>
+        <h2 hidden>menu</h2>
+        <ul>
+          <li><a href="#all"></a>ALL</li>
+          <li><a href="#web-site"></a>Web Site</li>
+          <li><a href="#app"></a>App</li>
+          <li><a href="#design"></a>Design</li>
+          <li><a href="#marketing"></a>Marketing</li>
+        </ul>
+      </section>
+      <!-- Section one -->
+      <section>
+        <h2 hidden>section-one</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/banking_app_interface_concept.jpg"
+              alt="banking_app_interface_concept"
+            />
+          </li>
+          <li><h3>Banking App Interface Concept</h3></li>
+          <li><p>App</p></li>
+        </ul>
+        <ul>
+          <li><img src="./images/cashless_payment.jpg" alt="cashless_payment" /></li>
+          <li><h3>Cashless Payment</h3></li>
+          <li><p>Marketing</p></li>
+        </ul>
+        <ul>
+          <li><img src="./images/meditaion_app.jpg" alt="meditaion_app" /></li>
+          <li><h3>Meditaion App</h3></li>
+          <li><p>App</p></li>
+        </ul>
+      </section>
+      <!-- section two -->
+      <section>
+        <h2 hidden>section-two</h2>
+        <ul>
+          <li><img src="./images/taxi_service.jpg" alt="taxi_service" /></li>
+          <li><h3>Taxi Service</h3></li>
+          <li><p>Marketing</p></li>
+        </ul>
+        <ul>
+          <li><img src="./images/screen_illustrations.jpg" alt="screen_illustrations" /></li>
+          <li><h3>Screen Illustrations</h3></li>
+          <li><p>Design</p></li>
+        </ul>
+        <ul>
+          <li><img src="./images/online_courses.jpg" alt="online_courses" /></li>
+          <li><h3>Online Courses</h3></li>
+          <li><p>Marketing</p></li>
+        </ul>
+      </section>
+      <!-- section-three -->
+      <section>
+        <h2 hidden>section-three</h2>
+        <ul>
+          <li>
+            <img src="./images/instagram_stories_concept.jpg" alt="instagram_stories_concept" />
+          </li>
+          <li><h3>Instagram Stories Concept</h3></li>
+          <li><p>Design</p></li>
+        </ul>
+        <ul>
+          <li><img src="./images/organic_food.jpg" alt="organic_food" /></li>
+          <li><h3>Organic Food</h3></li>
+          <li><p>Web Site</p></li>
+        </ul>
+        <ul>
+          <li><img src="./images/fresh_coffee.jpg" alt="fresh_coffee" /></li>
+          <li><h3>Fresh Coffee</h3></li>
+          <li><p>Web Site</p></li>
+        </ul>
+      </section>
+    </main>
+    <!-- Footer -->
     <footer>
       <a href="./index.html">WebStudio</a>
       <p>
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
+        Increase the flow of customers and sales for your business with digital marketing & growth
+        solutions.
       </p>
     </footer>
-</body>
+  </body>
 </html>
