--- a/index.html
+++ b/index.html
@@ -15,59 +15,60 @@
     <link rel="stylesheet" href="./styles/style.css" />
   </head>
   <body>
-    <!-- navigation on pages -->
-    <header>
+    <!-- Top-line -->
+    <header class="top-line">
       <nav>
-        <a class="link" href="./index.html">WebStudio</a>
+        <a href="./index.html" class="logo"> <span class="top-line-web">Web</span>STUDIO</a>
         <ul>
-          <li><a href="./index.html">Studio</a></li>
-          <li><a href="./portfolio.html">Portfolio</a></li>
-          <li><a href="./contacts.html">Contacts</a></li>
+          <li><a href="./index.html" class="site-nav-link">Studio</a></li>
+          <li><a href="./portfolio.html" class="site-nav-link">Portfolio</a></li>
+          <li><a href="./contacts.html" class="site-nav-link">Contacts</a></li>
         </ul>
       </nav>
       <address>
         <ul>
           <li>
-            <a class="contact-tel" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="contact-email" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li><a class="contact-email" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li><a class="contact-tel" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
-    <!-- Main section -->
+
     <main>
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button class="modal-open-btn button" type="button">Order Service</button>
+      <!-- hero-section -->
+      <section class="section`">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button class="modal-open-btn" type="button">Order Service</button>
       </section>
-      <section>
+      <section class="feautres">
         <h2 hidden>features</h2>
-        <ul>
+        <ul class="Features-list">
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="title">Strategy</h3>
+            <p class="features-dskr">
               Our goal is to identify the business problem to walk away with the perfect and
               creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="title">Punctuality</h3>
+            <p class="features-dskr">
               Bring the key message to the brand's audience for the best price within the shortest
               possible time.
             </p>
           </li>
 
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="title">Diligence</h3>
+            <p class="features-dskr">
               Research and confirm brands that present the strongest digital growth opportunities
               and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="title">Technologies</h3>
+            <p class="features-dskr">
               Design practice focused on digital experiences. We bring forth a deep passion for
               problem-solving.
             </p>
@@ -76,9 +77,9 @@
       </section>
 
       <!-- What are we doing -->
-      <section>
-        <h2>What are we doing</h2>
-        <ul>
+      <section class="section">
+        <h2 class="section-title">What are we doing</h2>
+        <ul class="we-doing-list">
           <li>
             <img src="./images/imac.jpg" alt="desctop" width="360" />
           </li>
@@ -91,36 +92,36 @@
         </ul>
       </section>
       <!-- Our team -->
-      <section>
-        <h2>Our Team</h2>
-        <ul>
+      <section class="section">
+        <h2 class="section-title">Our Team</h2>
+        <ul class="our-team-title">
           <li>
             <img src="./images/mark.jpg" alt="man_mark" width="264" />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="title">Mark Guerrero</h3>
+            <p class="our-team-dskr">Product Designer</p>
           </li>
           <li>
             <img src="./images/ford.jpg" alt="man_tom" width="264" />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="title">Tom Ford</h3>
+            <p class="our-team-dskr">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/camila.jpg" alt="woman_camila" width="264" />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="title">Camila Garcia</h3>
+            <p class="our-team-dskr">Marketing</p>
           </li>
           <li>
             <img src="./images/wilson.jpg" alt="man_daniel" width="264" />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="title">Daniel Wilson</h3>
+            <p class="our-team-dskr">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <!-- Footer -->
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a href="./index.html" class="logo"> <span class="top-line-web">Web</span>STUDIO</a>
+      <p class="footer-dskr">
         Increase the flow of customers and sales for your business with digital marketing & growth
         solutions.
       </p>
