--- a/index.html
+++ b/index.html
@@ -19,18 +19,20 @@
     <header class="top-line">
       <nav>
         <a href="./index.html" class="logo"> <span class="top-line-web">Web</span>STUDIO</a>
-        <ul>
+        <ul class="list">
           <li><a href="./index.html" class="site-nav-link">Studio</a></li>
           <li><a href="./portfolio.html" class="site-nav-link">Portfolio</a></li>
           <li><a href="./contacts.html" class="site-nav-link">Contacts</a></li>
         </ul>
       </nav>
       <address>
-        <ul>
+        <ul class="list">
           <li>
             <a class="contact-email" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li><a class="contact-tel" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li>
+            <a class="contact-tel" href="tel:+110001111111">+11 (000) 111-11-11</a>
+          </li>
         </ul>
       </address>
     </header>
@@ -43,7 +45,7 @@
       </section>
       <section class="feautres">
         <h2 hidden>features</h2>
-        <ul class="Features-list">
+        <ul class="list">
           <li>
             <h3 class="title">Strategy</h3>
             <p class="features-dskr">
@@ -79,39 +81,39 @@
       <!-- What are we doing -->
       <section class="section">
         <h2 class="section-title">What are we doing</h2>
-        <ul class="we-doing-list">
-          <li>
-            <img src="./images/imac.jpg" alt="desctop" width="360" />
+        <ul class="list">
+          <li class="list">
+            <img src="./images/imac.jpg" alt="desctop" width="360" height="300" />
           </li>
           <li>
-            <img src="./images/iphone.jpg" alt="phone" width="360" />
+            <img src="./images/iphone.jpg" alt="phone" width="360" height="300"/>
           </li>
           <li>
-            <img src="./images/inhand.jpg" alt="phone_in_hand" width="360" />
+            <img src="./images/inhand.jpg" alt="phone_in_hand" width="360" height="300" />
           </li>
         </ul>
       </section>
       <!-- Our team -->
       <section class="section">
         <h2 class="section-title">Our Team</h2>
-        <ul class="our-team-title">
+        <ul class="list">
           <li>
-            <img src="./images/mark.jpg" alt="man_mark" width="264" />
+            <img src="./images/mark.jpg" alt="man_mark" width="264" height="260" />
             <h3 class="title">Mark Guerrero</h3>
             <p class="our-team-dskr">Product Designer</p>
           </li>
           <li>
-            <img src="./images/ford.jpg" alt="man_tom" width="264" />
+            <img src="./images/ford.jpg" alt="man_tom" width="264" height="260" />
             <h3 class="title">Tom Ford</h3>
             <p class="our-team-dskr">Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/camila.jpg" alt="woman_camila" width="264" />
+            <img src="./images/camila.jpg" alt="woman_camila" width="264" height="260"/>
             <h3 class="title">Camila Garcia</h3>
             <p class="our-team-dskr">Marketing</p>
           </li>
           <li>
-            <img src="./images/wilson.jpg" alt="man_daniel" width="264" />
+            <img src="./images/wilson.jpg" alt="man_daniel" width="264" height="260"/>
             <h3 class="title">Daniel Wilson</h3>
             <p class="our-team-dskr">UI Designer</p>
           </li>
