--- a/portfolio.html
+++ b/portfolio.html
@@ -10,27 +10,27 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-
-    <title>portfolio</title>
     <link rel="stylesheet" href="./styles/style.css" />
+    <title>portfolio</title>
   </head>
   <body>
     <!-- top-line -->
-    <header class="page-header">
-      <nav class="site-nav-link">
-        <a href="./index.html" class="logo">WebStudio</a>
-        <ul class="menu">
-          <li class="menu-item"><a class="menu-link" href="./index.html">Studio</a></li>
-          <li class="menu-item"><a class="menu-link" href="./portfolio.html">Portfolio</a></li>
-          <li class="menu-item"><a class="menu-link" href="./contacts.html">Contacts</a></li>
+    <header class="top-line">
+      <nav>
+        <a href="./index.html" class="logo"> <span class="top-line-web">Web</span>STUDIO</a>
+        <ul>
+          <li class="list"><a href="./index.html" class="site-nav-link">Studio</a></li>
+          <li class="list"><a href="./portfolio.html" class="site-nav-link">Portfolio</a></li>
+          <li class="list"><a href="./contacts.html" class="site-nav-link">Contacts</a></li>
         </ul>
       </nav>
+      <!-- Contacts -->
       <address>
-        <ul class="list">
-          <li class="link">
+        <ul>
+          <li class="list">
             <a class="contact-email" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li class="link">
+          <li class="list">
             <a class="contact-tel" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
@@ -38,20 +38,20 @@
     </header>
 
     <main>
-      <section>
+      <section class="section">
         <h1 hidden>portfolio</h1>
-        <!-- Main menu -->
-        <ul class="filter-menu">
-          <li class="filter-menu-btn"><button type="button">ALL</button></li>
-          <li class="filter-menu-btn"><button type="button">Web Site</button></li>
-          <li class="filter-menu-btn"><button type="button">App</button></li>
-          <li class="filter-menu-btn"><button type="button">Design</button></li>
-          <li class="filter-menu-btn"><button type="button">Marketing</button></li>
+        <!-- Filter menu -->
+        <ul class="list">
+          <li><button type="button">ALL</button></li>
+          <li><button type="button">Web Site</button></li>
+          <li><button type="button">App</button></li>
+          <li><button type="button">Design</button></li>
+          <li><button type="button">Marketing</button></li>
         </ul>
 
         <!-- Section one -->
 
-        <ul class="section-one-list">
+        <ul class="list">
           <li>
             <img
               src="./images/banking_app_interface_concept.jpg"
@@ -59,62 +59,62 @@
             />
           </li>
           <li><h3>Banking App Interface Concept</h3></li>
-          <li><p id="app">App</p></li>
+          <li><p>App</p></li>
         </ul>
-        <ul>
+        <ul class="list">
           <li><img src="./images/cashless_payment.jpg" alt="cashless_payment" /></li>
           <li><h3>Cashless Payment</h3></li>
-          <li><p id="marketing">Marketing</p></li>
+          <li><p>Marketing</p></li>
         </ul>
-        <ul>
+        <ul class="list">
           <li><img src="./images/meditaion_app.jpg" alt="meditaion_app" /></li>
           <li><h3>Meditaion App</h3></li>
-          <li><p id="app">App</p></li>
+          <li><p>App</p></li>
         </ul>
 
         <!-- section two -->
 
-        <ul>
+        <ul class="list">
           <li><img src="./images/taxi_service.jpg" alt="taxi_service" /></li>
           <li><h3>Taxi Service</h3></li>
-          <li><p id="marketing">Marketing</p></li>
+          <li><p>Marketing</p></li>
         </ul>
-        <ul>
+        <ul class="list">
           <li><img src="./images/screen_illustrations.jpg" alt="screen_illustrations" /></li>
           <li><h3>Screen Illustrations</h3></li>
-          <li><p id="design">Design</p></li>
+          <li><p>Design</p></li>
         </ul>
-        <ul>
+        <ul class="list">
           <li><img src="./images/online_courses.jpg" alt="online_courses" /></li>
           <li><h3>Online Courses</h3></li>
-          <li><p id="marketing">Marketing</p></li>
+          <li><p>Marketing</p></li>
         </ul>
 
         <!-- section-three -->
 
-        <ul>
+        <ul class="list">
           <li>
             <img src="./images/instagram_stories_concept.jpg" alt="instagram_stories_concept" />
           </li>
           <li><h3>Instagram Stories Concept</h3></li>
-          <li><p id="design">Design</p></li>
+          <li><p>Design</p></li>
         </ul>
-        <ul>
-          <li><img src="./images/organic_food.jpg" alt="organic_food" /></li>
+        <ul class="list">
+          <li><img src="./images/organic_food.jpg" alt="organic_food" width="360" height="360"/></li>
           <li><h3>Organic Food</h3></li>
-          <li><p id="web-site">Web Site</p></li>
+          <li><p>Web Site</p></li>
         </ul>
-        <ul>
+        <ul class="list">
           <li><img src="./images/fresh_coffee.jpg" alt="fresh_coffee" /></li>
           <li><h3>Fresh Coffee</h3></li>
-          <li><p id="web-site">Web Site</p></li>
+          <li><p>Web Site</p></li>
         </ul>
       </section>
     </main>
     <!-- Footer -->
-    <footer>
-      <a href="./index.html" class="logo">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a href="./index.html" class="logo"> <span class="top-line-web">Web</span>STUDIO</a>
+      <p class="footer-dskr">
         Increase the flow of customers and sales for your business with digital marketing & growth
         solutions.
       </p>
