--- a/portfolio.html
+++ b/portfolio.html
@@ -39,7 +39,7 @@
 
     <main>
       <section class="section">
-        <h1 hidden>portfolio</h1>
+        <h1 class="title" hidden>portfolio</h1>
         <!-- Filter menu -->
         <ul class="list">
           <li><button type="button">ALL</button></li>
@@ -100,7 +100,9 @@
           <li><p>Design</p></li>
         </ul>
         <ul class="list">
-          <li><img src="./images/organic_food.jpg" alt="organic_food" width="360" height="360"/></li>
+          <li>
+            <img src="./images/organic_food.jpg" alt="organic_food" width="360" height="360" />
+          </li>
           <li><h3>Organic Food</h3></li>
           <li><p>Web Site</p></li>
         </ul>
