--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
 
     <title>WebStudio</title>
-    <link rel="stylesheet" href="./styles/style.css" />
+    <link rel="stylesheet" href="./CSS/style.css" />
   </head>
   <body>
     <!-- Top-line -->
@@ -86,7 +86,7 @@
             <img src="./images/imac.jpg" alt="desctop" width="360" height="300" />
           </li>
           <li>
-            <img src="./images/iphone.jpg" alt="phone" width="360" height="300"/>
+            <img src="./images/iphone.jpg" alt="phone" width="360" height="300" />
           </li>
           <li>
             <img src="./images/inhand.jpg" alt="phone_in_hand" width="360" height="300" />
@@ -108,12 +108,12 @@
             <p class="our-team-dskr">Frontend Developer</p>
           </li>
           <li>
-            <img src="./images/camila.jpg" alt="woman_camila" width="264" height="260"/>
+            <img src="./images/camila.jpg" alt="woman_camila" width="264" height="260" />
             <h3 class="title">Camila Garcia</h3>
             <p class="our-team-dskr">Marketing</p>
           </li>
           <li>
-            <img src="./images/wilson.jpg" alt="man_daniel" width="264" height="260"/>
+            <img src="./images/wilson.jpg" alt="man_daniel" width="264" height="260" />
             <h3 class="title">Daniel Wilson</h3>
             <p class="our-team-dskr">UI Designer</p>
           </li>
