--- a/Portfolio.html
+++ b/Portfolio.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./CSS/style.css" />
     <title>portfolio</title>
   </head>
-  <body>
+  <body class="page">
     <!-- top-line -->
     <header class="top-line">
       <nav>
