--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>WebStudio</title>
     <link rel="stylesheet" href="./CSS/style.css" />
   </head>
-  <body>
+  <body class="page">
     <!-- Top-line -->
     <header class="top-line">
       <nav>
