--- a/Portfolio.html
+++ b/Portfolio.html
@@ -10,14 +10,14 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./CSS/style.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
     <title>portfolio</title>
   </head>
   <body class="page">
     <!-- top-line -->
     <header class="top-line">
       <nav>
-        <a href="./index.html" class="logo"> <span class="top-line-web">Web</span>STUDIO</a>
+        <a href="./index.html" class="logo">Web<span class="top-line-web">Studio</span></a>
         <ul>
           <li class="list"><a href="./index.html" class="site-nav-link">Studio</a></li>
           <li class="list"><a href="./portfolio.html" class="site-nav-link">Portfolio</a></li>
