--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
 
     <title>WebStudio</title>
-    <link rel="stylesheet" href="./CSS/style.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body class="page">
     <!-- Top-line -->
