--- a/Portfolio.html
+++ b/Portfolio.html
@@ -17,7 +17,7 @@
     <!-- top-line -->
     <header class="top-line">
       <nav>
-        <a href="./index.html" class="logo">Web<span class="top-line-web">Studio</span></a>
+        <a href="./index.html" class="logo"> <span class="top-line-web">Web</span>STUDIO</a>
         <ul>
           <li class="list"><a href="./index.html" class="site-nav-link">Studio</a></li>
           <li class="list"><a href="./portfolio.html" class="site-nav-link">Portfolio</a></li>
