--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!-- Top-line -->
     <header class="top-line">
       <nav>
-        <a href="./index.html" class="logo"> <span class="top-line-web">Web</span>STUDIO</a>
+        <a href="./index.html" class="logo link"> Web<span>Studio</span></a>
         <ul class="list">
           <li><a href="./index.html" class="site-nav-link">Studio</a></li>
           <li><a href="./portfolio.html" class="site-nav-link">Portfolio</a></li>
@@ -123,7 +123,7 @@
     </main>
     <!-- Footer -->
     <footer class="footer">
-      <a href="./index.html" class="logo"> <span class="top-line-web">Web</span>STUDIO</a>
+      <a href="./index.html" class="logo link"> Web<span>Studio</span></a>
       <p class="footer-dskr">
         Increase the flow of customers and sales for your business with digital marketing & growth
         solutions.
