--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
     <!-- top-line -->
     <header class="top-line">
       <nav>
-        <a href="./index.html" class="logo"> <span class="top-line-web">Web</span>STUDIO</a>
+        <a href="./index.html" class="logo link"> Web<span>Studio</span></a>
         <ul>
           <li class="list"><a href="./index.html" class="site-nav-link">Studio</a></li>
           <li class="list"><a href="./portfolio.html" class="site-nav-link">Portfolio</a></li>
@@ -115,7 +115,7 @@
     </main>
     <!-- Footer -->
     <footer class="footer">
-      <a href="./index.html" class="logo"> <span class="top-line-web">Web</span>STUDIO</a>
+      <a href="./index.html" class="logo link"> Web<span>Studio</span></a>
       <p class="footer-dskr">
         Increase the flow of customers and sales for your business with digital marketing & growth
         solutions.
