--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header class="top-line">
       <nav>
         <a href="./index.html" class="logo link"> Web<span>Studio</span></a>
-        <ul class="list">
+        <ul class="site-navi list">
           <li><a href="./index.html" class="site-nav-link">Studio</a></li>
           <li><a href="./portfolio.html" class="site-nav-link">Portfolio</a></li>
           <li></li>
