fix css portfolio

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body class="page">
     <!-- Top-line -->
-    <header class="top-line">
+    <header class="top-header">
       <nav>
         <a href="./index.html" class="logo link"> Web<span>Studio</span></a>
         <ul class="site-navi list">
