--- a/portfolio.html
+++ b/portfolio.html
@@ -14,8 +14,9 @@
     <title>portfolio</title>
   </head>
   <body class="page">
+  
     <!-- top-line -->
-    <header class="top-line">
+    <header class="top-header">
       <nav>
         <a href="./index.html" class="logo link"> Web<span>Studio</span></a>
         <ul>
@@ -39,14 +40,14 @@
 
     <main>
       <section class="section">
-        <h1 class="title" hidden>portfolio</h1>
+        <h1 class="title" hidden>Portfolio menu Buttons</h1>
         <!-- Filter menu -->
         <ul class="list">
-          <li><button type="button">ALL</button></li>
-          <li><button type="button">Web Site</button></li>
-          <li><button type="button">App</button></li>
-          <li><button type="button">Design</button></li>
-          <li><button type="button">Marketing</button></li>
+          <li><button class="button" type="button">ALL</button></li>
+          <li><button class="button" type="button">Web Site</button></li>
+          <li><button class="button" type="button">App</button></li>
+          <li><button class="button" type="button">Design</button></li>
+          <li><button class="button" type="button">Marketing</button></li>
         </ul>
 
         <!-- Section one -->
