--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         </ul>
       </section>
       <!-- Our team -->
-      <section class="section">
+      <section class="our-team">
         <h2 class="section-title">Our Team</h2>
         <ul class="list">
           <li>
@@ -123,7 +123,7 @@
     </main>
     <!-- Footer -->
     <footer class="footer">
-      <a href="./index.html" class="logo link"> Web<span>Studio</span></a>
+      <a class="logo link" href="./index.html">Web<span class="">Studio</span></a>
       <p class="footer-dskr">
         Increase the flow of customers and sales for your business with digital marketing & growth
         solutions.
