--- a/portfolio.html
+++ b/portfolio.html
@@ -14,12 +14,11 @@
     <title>portfolio</title>
   </head>
   <body class="page">
-  
     <!-- top-line -->
     <header class="top-header">
       <nav>
         <a href="./index.html" class="logo link"> Web<span>Studio</span></a>
-        <ul>
+        <ul class="link">
           <li class="list"><a href="./index.html" class="site-nav-link">Studio</a></li>
           <li class="list"><a href="./portfolio.html" class="site-nav-link">Portfolio</a></li>
           <li class="list"><a href="./contacts.html" class="site-nav-link">Contacts</a></li>
