--- a/portfolio.html
+++ b/portfolio.html
@@ -39,9 +39,9 @@
 
     <main>
       <section class="section">
-        <h1 class="title" hidden>Portfolio menu Buttons</h1>
+        <h1 class="title-but" hidden>Portfolio menu Buttons</h1>
         <!-- Filter menu -->
-        <ul class="list">
+        <ul class="button list">
           <li><button class="button" type="button">ALL</button></li>
           <li><button class="button" type="button">Web Site</button></li>
           <li><button class="button" type="button">App</button></li>
