--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
     <!-- top-line -->
     <header class="top-header">
       <nav>
-        <a href="./index.html" class="logo link"> Web<span>Studio</span></a>
+        <a class="logo link" href="./index.html"> Web<span>Studio</span></a>
         <ul class="link">
           <li class="list"><a href="./index.html" class="site-nav-link">Studio</a></li>
           <li class="list"><a href="./portfolio.html" class="site-nav-link">Portfolio</a></li>
