--- a/portfolio.html
+++ b/portfolio.html
@@ -115,7 +115,7 @@
     </main>
     <!-- Footer -->
     <footer class="footer">
-      <a href="./index.html" class="logo link"> Web<span>Studio</span></a>
+      <a class="logo link" href="./index.html"> Web<span class="footer-logo-color">Studio</span></a>
       <p class="footer-dskr">
         Increase the flow of customers and sales for your business with digital marketing & growth
         solutions.
