--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,7 @@
     <!-- top-line -->
     <header class="top-header">
       <nav>
-        <a class="logo link" href="./index.html"> Web<span>Studio</span></a>
+        <a class="logo link" href="./index.html"> Web<span class="logo-top">Studio</span></a>
         <ul class="link">
           <li class="list"><a href="./index.html" class="site-nav-link">Studio</a></li>
           <li class="list"><a href="./portfolio.html" class="site-nav-link">Portfolio</a></li>
@@ -26,11 +26,11 @@
       </nav>
       <!-- Contacts -->
       <address>
-        <ul>
-          <li class="list">
+        <ul class="list">
+          <li>
             <a class="contact-email" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li class="list">
+          <li>
             <a class="contact-tel" href="tel:+110001111111">+11 (000) 111-11-11</a>
           </li>
         </ul>
@@ -115,7 +115,8 @@
     </main>
     <!-- Footer -->
     <footer class="footer">
-      <a class="logo link" href="./index.html"> Web<span class="footer-logo-color">Studio</span></a>
+      <a class="logo link" href="./index.html">Web<span class="footer-logo-color">Studio</span></a>
+
       <p class="footer-dskr">
         Increase the flow of customers and sales for your business with digital marketing & growth
         solutions.
