--- a/portfolio.html
+++ b/portfolio.html
@@ -45,19 +45,19 @@
         <h1 class="main-section-filter" hidden>Filter Buttons</h1>
         <ul class="filter-btn-list list">
           <li class="filter-btn-item">
-            <button class="filter-but" type="button">All</button>
+            <button class="filter-but button" type="button">All</button>
           </li>
           <li class="filter-btn-item">
-            <button class="filter-but" type="button">Web Site</button>
+            <button class="filter-but button" type="button">Web Site</button>
           </li>
           <li class="filter-btn-item">
-            <button class="filter-but" type="button">App</button>
+            <button class="filter-but button" type="button">App</button>
           </li>
           <li class="filter-btn-item">
-            <button class="filter-but" type="button">Design</button>
+            <button class="filter-but button" type="button">Design</button>
           </li>
           <li class="filter-btn-item">
-            <button class="filter-but" type="button">Marketing</button>
+            <button class="filter-but button" type="button">Marketing</button>
           </li>
         </ul>
 
