--- a/portfolio.html
+++ b/portfolio.html
@@ -33,9 +33,9 @@
       <address class="contacts">
         <ul class="contacts-list list">
           <li>
-            <a class="contact-email link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="contact link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li><a class="contact-phone link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li><a class="contact link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
