--- a/portfolio.html
+++ b/portfolio.html
@@ -10,8 +10,8 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500&display=swap"
       rel="stylesheet"
     />
-    <title>portfolio</title>
     <link rel="stylesheet" href="./css/styles.css" />
+    <title>portfolio</title>
   </head>
   <body class="page">
     <!-- Navigation on pages -->
@@ -33,9 +33,9 @@
       <address class="contacts">
         <ul class="contacts-list list">
           <li>
-            <a class="contact link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="site-menu-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
-          <li><a class="contact link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li><a class="site-menu-link link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
