--- a/index.html
+++ b/index.html
@@ -104,17 +104,17 @@
             <h3 class="our-team-members">Mark Guerrero</h3>
             <p class="our-team-desc">Product Designer</p>
           </li>
-          <li>
+          <li class="our-team-item">
             <img src="./images/ford.jpg" alt="man_tom" width="264" height="260" />
             <h3 class="our-team-members">Tom Ford</h3>
             <p class="our-team-desc">Frontend Developer</p>
           </li>
-          <li>
+          <li class="our-team-item">
             <img src="./images/camila.jpg" alt="woman_camila" width="264" height="260" />
             <h3 class="our-team-members">Camila Garcia</h3>
             <p class="our-team-desc">Marketing</p>
           </li>
-          <li>
+          <li class="our-team-item">
             <img src="./images/wilson.jpg" alt="man_daniel" width="264" height="260" />
             <h3 class="our-team-members">Daniel Wilson</h3>
             <p class="our-team-desc">UI Designer</p>
