add our-team-item class

--- a/portfolio.html
+++ b/portfolio.html
@@ -14,7 +14,7 @@
     <title>portfolio</title>
   </head>
   <body class="page">
-    <!-- Navigation on pages -->
+    <!-- portfolio-header -->
     <header class="header-page">
       <nav>
         <a href="./index.html" class="logo link"
