--- a/portfolio.html
+++ b/portfolio.html
@@ -75,7 +75,7 @@
             >
           </li>
 
-          <li>
+          <li class="portfolio-item">
             <a class="portfolio-links link" href=""
               ><img
                 src="./images/cashless_payment.jpg"
@@ -88,17 +88,22 @@
             >
           </li>
 
-          <li>
+          <li class="portfolio-item">
             <a class="portfolio-links link" href=""
-              ><img src="./images/meditaion_app.jpg" alt="meditaion_app" width="360" height="300" />
-              <h2 class="portfolio-title">Meditaion App</h2>
+              ><img
+                src="./images/meditaion_app.jpg"
+                alt="Meditation App"
+                width="360"
+                height="300"
+              />
+              <h2 class="portfolio-title">Meditation App</h2>
               <p class="portfolio-dscr">App</p></a
             >
           </li>
 
           <!-- section thre -->
 
-          <li>
+          <li class="portfolio-item">
             <a class="portfolio-links link" href=""
               ><img src="./images/taxi_service.jpg" alt="taxi_service" width="360" height="300" />
               <h2 class="portfolio-title">Taxi Service</h2>
@@ -106,7 +111,7 @@
             >
           </li>
 
-          <li>
+          <li class="portfolio-item">
             <a class="portfolio-links link" href=""
               ><img
                 src="./images/screen_illustrations.jpg"
@@ -119,9 +124,9 @@
             >
           </li>
 
-          <li>
-            <a class="portfolio-links link" href="">
-              <img
+          <li class="portfolio-item">
+            <a class="portfolio-links link" href=""
+              ><img
                 src="./images/online_courses.jpg"
                 alt="online_courses"
                 width="360"
@@ -133,7 +138,7 @@
             >
           </li>
 
-          <li>
+          <li class="portfolio-item">
             <a class="portfolio-links link" href=""
               ><img
                 src="./images/instagram_stories_concept.jpg"
@@ -147,7 +152,7 @@
             >
           </li>
 
-          <li>
+          <li class="portfolio-item">
             <a class="portfolio-links link" href=""
               ><img src="./images/organic_food.jpg" alt="organic_food" width="360" height="300" />
               <h2 class="portfolio-title">Organic Food</h2>
@@ -155,7 +160,7 @@
             >
           </li>
 
-          <li>
+          <li class="portfolio-item">
             <a class="portfolio-links link" href=""
               ><img src="./images/fresh_coffee.jpg" alt="fresh_coffee" width="360" height="300" />
 
