--- a/index.html
+++ b/index.html
@@ -21,13 +21,15 @@
           >Web<span class="logo-header-light">Studio</span></a
         >
         <ul class="site-menu list">
+          
           <li class="site-menu-item">
             <a class="site-menu-link link" href="./index.html">Studio</a>
           </li>
           <li class="site-menu-item">
             <a class="site-menu-link link" href="./portfolio.html">Portfolio</a>
           </li>
-          <li class="site-menu-item"><a class="site-menu-link link" href="">Contacts</a></li>
+          <li class="site-menu-item">
+            <a class="site-menu-link link" href="">Contacts</a></li>
         </ul>
       </nav>
       <address class="contacts">
