fix unnecessary css

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
           </li>
         </ul>
       </nav>
-      <address class="contacts">
-        <ul class="contacts-list list">
+      <address class="contact">
+        <ul class="contact-list list">
           <li>
             <a class="contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
