--- a/portfolio.html
+++ b/portfolio.html
@@ -30,8 +30,8 @@
           <li class="site-menu-item"><a class="site-menu-link link" href="">Contacts</a></li>
         </ul>
       </nav>
-      <address class="contacts">
-        <ul class="contacts-list list">
+      <address class="contact">
+        <ul class="contact-list list">
           <li>
             <a class="contact-link link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
